--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="card">
                         <h3>HTML getCode 1</h3>
                         <p>Simple and responsive HTML getCode.</p>
-                        <button onclick="showAlert('HTML getCode 1')">View</button>
+                        <button id="button" onclick="showAlert('HTML getCode 1')">View</button>
                     </div>
                     <div class="card">
                         <h3>CSS Neomorphism</h3>
@@ -97,7 +97,7 @@
                 <p>Phone: +1234567890</p>
             </section>
         </main>
-    </div>
+    </div>                                          
     
     <script src="index.js"> </script>
 </body>
